fix dark themes

--- a/app/globals.css
+++ b/app/globals.css
@@ -9,13 +9,21 @@
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #f1f1f1;
+  background: #00000025;
 }
+
+/* .dark ::-webkit-scrollbar-track { */
+/*   background: #00132a; */
+/* } */
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
   background: #b4b4b4;
   border-radius: 5px;
+}
+
+.dark ::-webkit-scrollbar-thumb {
+  background: #033d4e;
 }
 
 /* Handle on hover */
